--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,3 +14,13 @@
     margin: 10px;
     width: 100%;
 }
+
+#colorOscillatorRange {
+    margin: 10px;
+}
+
+#appStack {
+    /*limit to width of window*/
+    max-width: 100vw;
+    max-height: 100vw;
+}
