--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,11 @@
     max-width: 450px;
 }
 
+#canvasContainer {
+    display: flex;
+    padding: 0px;
+}
+
 #canvas {
     margin: auto;
 }
@@ -21,6 +26,6 @@
 
 #appStack {
     /*limit to width of window*/
-    max-width: 100vw;
+    max-width: 76vw;
     max-height: 100vw;
 }
