--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,10 @@
+body{
+    background-color: rgb(0, 0, 0);
+}
+
+label{
+    color: rgb(255, 208, 0);
+}
 #controlsContainer {
     margin: auto;
     max-width: 450px;
